# Rust-UDP-Traffic-Generator

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  sender.rs  statistics.rs
