[package]
name = "udp_traffic_generator"
version = "0.1.4"
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "A tool to generate UDP traffic"
readme = "README.md"
homepage = "https://github.com/newfla/Rust-UDP-Traffic-Generator"
repository = "https://github.com/newfla/Rust-UDP-Traffic-Generator"
keywords = ["cli", "udp", "client", "traffic", "generator"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
fastrand = "1.8.0"
clap = "4.0.29"
byte-unit = "4.0.17"
tokio = { version = "1.23.0", features = ["full"] }
kanal = "0.1.0-pre7"
derive-new = "0.5"
mimalloc = { version = "*", default-features = false }

[profile.release]
lto = true
strip = true
panic = "abort"